# devagent

./: .gitignore  create_memory.py  pyproject.toml  simple_test.json
app/: config.py  main.py  models.py
app/agents/: bedrock_orchestrator.py.bak  multi_agent_orchestrator.py
app/api/v1/: endpoints.py
app/core/: analyzer.py  bedrock_client.py
app/core/parsers/: ast_parser.py  tree_sitter.py
app/memory/: manager.py
app/routers/: github.py
cloudformation/: bedrock-agents-nova.yaml  bedrock-agents.yaml
scripts/: create_bedrock_agents.py  test_api.py
tests/: test_main.py
